tests/invalid/parser/unsafe_decls.ri
unsafe const BAD: i32 = 0;

unsafe static BAD: i32 = 0;
unsafe static mut BAD2: i32 = 0; // BAD, unsafe by default (`mut`)

unsafe mod Bad {}

unsafe type Alias = u8;

unsafe errtype UnsafeError;

unsafe trait Traitable { }

unsafe union Union { A }

unsafe struct Struct { }

unsafe enum Enum { A }

unsafe extend Enum { }

unsafe test "Unsafe objects" { }

unsafe fn ok_func() { } // OK
